k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-platform-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-platform-api
  template:
    metadata:
      labels:
        app: cloud-platform-api
    spec:
      containers:
        - name: api
          image: willz80s/cloud-platform-api:latest 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
